crates/dag-macros/tests/ui/workflow_switch_case_target_not_ident.stderr
error: switch! cases must map to node aliases (e.g. `"k" => target`)
  --> tests/ui/workflow_switch_case_target_not_ident.rs:39:26
   |
39 |         cases = { "a" => "a" }
   |                          ^^^
